[gd_scene load_steps=10 format=3 uid="uid://c1qpaa6kw7bkh"]

[ext_resource type="Texture2D" uid="uid://b4v2k6fnuiic5" path="res://MainUI/MainUI.png" id="1_eofwm"]
[ext_resource type="Script" path="res://SpaceBodies/UpgradeStation/upgrades_ui.gd" id="1_jnqrh"]
[ext_resource type="Texture2D" uid="uid://qqwfghu27eqy" path="res://ItemSprites/IronOre.png" id="2_ww580"]
[ext_resource type="Texture2D" uid="uid://eto15wmny5m7" path="res://ItemSprites/Plasma.png" id="3_hqv5o"]
[ext_resource type="Texture2D" uid="uid://10rcsgsvk6c4" path="res://ItemSprites/IceCrystals.png" id="4_6g6dd"]
[ext_resource type="AudioStream" uid="uid://bugeldt1sgro1" path="res://SFX/551543__philracoindie__8-bit-denyerror-sound.wav" id="6_5gqq2"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4mivf"]
load_path = "res://.godot/imported/BagSprite.png-453db82011f3acf82f0923eb319891bf.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vx5sg"]
texture = ExtResource("1_eofwm")
texture_margin_left = 96.0
texture_margin_top = 88.0
texture_margin_right = 88.0
texture_margin_bottom = 96.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dujhw"]
texture = ExtResource("1_eofwm")
texture_margin_left = 96.0
texture_margin_top = 88.0
texture_margin_right = 88.0
texture_margin_bottom = 96.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
focus_mode = 2
script = ExtResource("1_jnqrh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -76.0
offset_top = -128.0
offset_right = 96.0
offset_bottom = 160.0
color = Color(0.162066, 0.162066, 0.162066, 1)

[node name="BagBG" type="NinePatchRect" parent="."]
offset_left = -84.0
offset_top = -136.0
offset_right = 104.0
offset_bottom = 168.0
texture = SubResource("CompressedTexture2D_4mivf")
region_rect = Rect2(27, 19, 74, 237)
patch_margin_left = 61
patch_margin_top = 13
patch_margin_right = 61
patch_margin_bottom = 13

[node name="Plus" type="Button" parent="."]
offset_left = 288.0
offset_top = 64.0
offset_right = 928.0
offset_bottom = 684.0
scale = Vector2(0.1, 0.1)
focus_mode = 0
theme_override_font_sizes/font_size = 128
theme_override_styles/hover = SubResource("StyleBoxTexture_vx5sg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dujhw")
theme_override_styles/normal = SubResource("StyleBoxTexture_dujhw")
text = "+"
flat = true
icon_alignment = 1
expand_icon = true

[node name="FullHealth" type="Button" parent="."]
layout_mode = 0
offset_left = -60.0
offset_top = -96.0
offset_right = 80.0
offset_bottom = -24.0

[node name="Iron" type="Button" parent="FullHealth"]
offset_left = 92.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 448.0
scale = Vector2(0.1, 0.1)
focus_mode = 0
theme_override_font_sizes/font_size = 128
theme_override_styles/hover = SubResource("StyleBoxTexture_vx5sg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dujhw")
theme_override_styles/normal = SubResource("StyleBoxTexture_dujhw")
icon = ExtResource("2_ww580")
icon_alignment = 1
expand_icon = true

[node name="Button" type="Button" parent="FullHealth/Iron"]
layout_mode = 0
offset_left = 80.0
offset_top = 440.0
offset_right = 323.0
offset_bottom = 553.0
focus_mode = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 76
text = "Iron: 5"
flat = true

[node name="Button2" type="Button" parent="FullHealth/Iron"]
layout_mode = 0
offset_left = -840.0
offset_top = 160.0
offset_right = -92.0
offset_bottom = 343.0
focus_mode = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 135
text = "Full Health - "
flat = true

[node name="Button3" type="Button" parent="FullHealth/Iron"]
layout_mode = 0
offset_left = -680.0
offset_top = -360.0
offset_right = 143.0
offset_bottom = -147.0
focus_mode = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 150
text = "Upgrades
"
flat = true

[node name="Speed" type="Button" parent="."]
layout_mode = 0
offset_left = -60.0
offset_top = -12.0
offset_right = 80.0
offset_bottom = 60.0

[node name="Plasma" type="Button" parent="Speed"]
offset_left = 92.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 448.0
scale = Vector2(0.1, 0.1)
focus_mode = 0
theme_override_font_sizes/font_size = 128
theme_override_styles/hover = SubResource("StyleBoxTexture_vx5sg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dujhw")
theme_override_styles/normal = SubResource("StyleBoxTexture_dujhw")
icon = ExtResource("3_hqv5o")
icon_alignment = 1
expand_icon = true

[node name="Button" type="Button" parent="Speed/Plasma"]
layout_mode = 0
offset_left = 20.0
offset_top = 440.0
offset_right = 378.0
offset_bottom = 553.0
focus_mode = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 76
text = "Plasma: 2"
flat = true

[node name="Button2" type="Button" parent="Speed/Plasma"]
layout_mode = 0
offset_left = -840.0
offset_top = 160.0
offset_right = -51.9999
offset_bottom = 353.0
focus_mode = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 135
text = "Speed - "
flat = true

[node name="Space" type="Button" parent="."]
layout_mode = 0
offset_left = -60.0
offset_top = 72.0
offset_right = 80.0
offset_bottom = 144.0

[node name="Crystal" type="Button" parent="Space"]
offset_left = 92.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 448.0
scale = Vector2(0.1, 0.1)
focus_mode = 0
theme_override_font_sizes/font_size = 128
theme_override_styles/hover = SubResource("StyleBoxTexture_vx5sg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dujhw")
theme_override_styles/normal = SubResource("StyleBoxTexture_dujhw")
icon = ExtResource("4_6g6dd")
icon_alignment = 1
expand_icon = true

[node name="Button" type="Button" parent="Space/Crystal"]
layout_mode = 0
offset_left = 20.0
offset_top = 440.0
offset_right = 366.0
offset_bottom = 553.0
focus_mode = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 76
text = "Crystal: 3"
flat = true

[node name="Button2" type="Button" parent="Space/Crystal"]
layout_mode = 0
offset_left = -840.0
offset_top = 160.0
offset_right = -51.9999
offset_bottom = 353.0
focus_mode = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 135
text = "Space -"
flat = true

[node name="NegativeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5gqq2")

[connection signal="pressed" from="FullHealth" to="." method="_on_full_health_pressed"]
[connection signal="pressed" from="Speed" to="." method="_on_speed_pressed"]
[connection signal="pressed" from="Space" to="." method="_on_speed_2_pressed"]
